<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlVistaL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3" >

    <ImageView
        android:id="@+id/ivTitutloL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/music"
        android:contentDescription="@string/app_name" >
    </ImageView>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/blue_f"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvLinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/peticionlink"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etRequestL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_margin="5dp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btSendL"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="left"
            android:text="@string/bepatient"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>